--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1>Hello Omer</h1>
+    <h2>How are you?</h2>
 </body>
 </html>
